--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -180,6 +180,7 @@
                     <div class="form-group">
                         <label class="Checkbox1"><input type="checkbox" id="chkAdd1" class="chkAdd1" value=""> ค่ากะ</label>
                         <label class="mgr-top10"><input type="checkbox" id="chkAdd2" class="chkAdd2" value=""> ค่าเบี้ยเลี้ยง</label>
+                        <input type="hidden" id="hidAddwage" />
                     </div>
                 </li>
                 <li>
