--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -576,13 +576,13 @@
                                                                     <input type="text" id="txtManDay" class="ManDay select-size50-height23 txtdisablerow" disabled />
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size50 textcenter">
+                                                                    <input type="text" id="txtManTime" name="txtManTime" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" class="ManTime text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size60 textcenter" onchange="GetManpowerHour()">
+                                                                    <input type="text" id="txtWorkingFrom" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" name="txtWorkingFrom" class="WorkingFrom timepicker text-size60 textcenter" onchange="GetManpowerHour()">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="GetManpowerHour()">
+                                                                    <input type="text" id="txtWorkingTo" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="GetManpowerHour()">
                                                                 </td>
                                                                 <td class="text-size100">
                                                                     <input id="chkBreak1" class="chkBreak1" onchange="GetManpowerHour('1')" type="checkbox" style="margin-left: 20px; margin-right: 20px;"/>
@@ -671,13 +671,13 @@
                                                                     </select>*@
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size50 textcenter">
+                                                                    <input type="text" id="txtManTime" name="txtManTime" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" class="ManTime text-size50 textcenter">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size60 textcenter" onchange="GetManpowerHour()">
+                                                                    <input type="text" id="txtWorkingFrom" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" name="txtWorkingFrom" class="WorkingFrom timepicker text-size60 textcenter" onchange="GetManpowerHour()">
                                                                 </td>
                                                                 <td>
-                                                                    <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="GetManpowerHour()">
+                                                                    <input type="text" id="txtWorkingTo" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="GetManpowerHour()">
                                                                 </td>
                                                                 <td class="text-size100">
                                                                     <input id="chkBreak1" class="chkBreak1" onchange="GetManpowerHour('1')" type="checkbox" style="margin-left: 20px;     margin-right: 20px;"/>
