--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -566,13 +566,13 @@
                                                             <input type="text" id="txtManDay" class="ManDay select-size50-height23 txtdisablerow" disabled />
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size60 textcenter">
+                                                            <input type="text" id="txtManTime" name="txtManTime" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" class="ManTime text-size60 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size60 textcenter" onchange="GetManpowerHour('1')">
+                                                            <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" class="WorkingFrom timepicker text-size60 textcenter" onchange="GetManpowerHour('1')">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="GetManpowerHour('1')">
+                                                            <input type="text" id="txtWorkingTo" name="txtWorkingTo" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" class="WorkingTo timepicker text-size60 textcenter" onchange="GetManpowerHour('1')">
                                                         </td>
                                                         <td class="text-size100">
                                                             <input id="chkBreak1" class="chkBreak1" type="checkbox" onchange="GetManpowerHour('1')" style="margin-left: 20px; margin-right: 20px;"/>
@@ -646,10 +646,10 @@
                                                             <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow" disabled />
                                                         </td>
                                                         <td>
-                                                            <input id="txtCardID" type="text" value="" class="text-left CardID text-size120 txtdisablerow" disabled />
+                                                            <input id="txtCardID" type="text" value="" class="text-left CardID text-size130 txtdisablerow" disabled />
                                                         </td>
                                                         <td>
-                                                            <input id="txtTechnicianType" type="text" value="" class="text-left TechnicianType text-size120 txtdisablerow" disabled />
+                                                            <input id="txtTechnicianType" type="text" value="" class="text-left TechnicianType text-size140 txtdisablerow" disabled />
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtManDate"  class="ManDate text-size110" onchange="GetManpowerHour('1')" onblur="GetDay()"/>
@@ -667,13 +667,13 @@
                                                             </select>*@
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size60 textcenter">
+                                                            <input type="text" id="txtManTime" name="txtManTime" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" class="ManTime text-size60 textcenter">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" class="WorkingFrom timepicker text-size60 textcenter" onchange="GetManpowerHour('1')">
+                                                            <input type="text" id="txtWorkingFrom" name="txtWorkingFrom" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" class="WorkingFrom timepicker text-size60 textcenter" onchange="GetManpowerHour('1')">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="txtWorkingTo" name="txtWorkingTo" class="WorkingTo timepicker text-size60 textcenter" onchange="GetManpowerHour('1')">
+                                                            <input type="text" id="txtWorkingTo" name="txtWorkingTo" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" class="WorkingTo timepicker text-size60 textcenter" onchange="GetManpowerHour('1')">
                                                         </td>
                                                         <td class="text-size100">
                                                             <input id="chkBreak1" class="chkBreak1" type="checkbox" onchange="GetManpowerHour('1')" style="margin-left: 20px; margin-right: 20px;" />
