--- a/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
@@ -59,7 +59,7 @@
                 <th class="thgray hideANDseek">บุคคลติดต่อ</th>
                 <th class="thgray hideANDseek">ผู้ประสานงาน</th>
                 <th class="thgray hideANDseek">หมายเหตุ</th>
-                <th class="thgray"></th>
+                <th class="thgray wd70"></th>
             </tr>
         </thead>
         <tbody id="result">
