--- a/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
@@ -1122,23 +1122,23 @@
                                 </td>
                                 <td>
                                     @*Qty1*@
-                                    <input type="text" id="txtQty" class="txtQty select-size50-height23 " value="0" onchange="CheckBorrow()" />
+                                    <input type="text" id="txtQty" class="txtQty select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" onchange="CheckBorrow()" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Good1*@
-                                    <input type="text" id="txtGood" class="txtGood select-size50-height23 " value="0" />
+                                    <input type="text" id="txtGood" class="txtGood select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Lost1*@
-                                    <input type="text" id="txtLost" class="txtLost select-size50-height23 " value="0" />
+                                    <input type="text" id="txtLost" class="txtLost select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Repair1*@
-                                    <input type="text" id="txtRepair" class="txtRepair select-size50-height23 " value="0" />
+                                    <input type="text" id="txtRepair" class="txtRepair select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Bad1*@
-                                    <input type="text" id="txtBad" class="txtBad select-size50-height23 " value="0" />
+                                    <input type="text" id="txtBad" class="txtBad select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn hidecolumn">
                                     @*Return Qty1*@
@@ -1201,23 +1201,23 @@
                                 </td>
                                 <td>
                                     @*Qty2*@
-                                    <input type="text" id="txtQty" class="txtQty select-size50-height23" value="0" onchange="CheckBorrow()" />
+                                    <input type="text" id="txtQty" class="txtQty select-size50-height23" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" onchange="CheckBorrow()" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Good2*@
-                                    <input type="text" id="txtGood" class="txtGood select-size50-height23 " value="0" />
+                                    <input type="text" id="txtGood" class="txtGood select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Lost2*@
-                                    <input type="text" id="txtLost" class="txtLost select-size50-height23 " value="0" />
+                                    <input type="text" id="txtLost" class="txtLost select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Repair2*@
-                                    <input type="text" id="txtRepair" class="txtRepair select-size50-height23 " value="0" />
+                                    <input type="text" id="txtRepair" class="txtRepair select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Bad2*@
-                                    <input type="text" id="txtBad" class="txtBad select-size50-height23 " value="0" />
+                                    <input type="text" id="txtBad" class="txtBad select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn hidecolumn">
                                     @*Return Qty1*@
@@ -1295,23 +1295,23 @@
                                 </td>
                                 <td>
                                     @*Qty1*@
-                                    <input type="text" id="txtQty2" class="txtQty2 select-size50-height23" value="0" onchange="CheckBorrow()" />
+                                    <input type="text" id="txtQty2" class="txtQty2 select-size50-height23" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" onchange="CheckBorrow()" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Good1*@
-                                    <input type="text" id="txtGood2" class="txtGood2 select-size50-height23 " value="0" />
+                                    <input type="text" id="txtGood2" class="txtGood2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Lost1*@
-                                    <input type="text" id="txtLost2" class="txtLost2 select-size50-height23 " value="0" />
+                                    <input type="text" id="txtLost2" class="txtLost2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Repair1*@
-                                    <input type="text" id="txtRepair2" class="txtRepair2 select-size50-height23 " value="0" />
+                                    <input type="text" id="txtRepair2" class="txtRepair2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Bad1*@
-                                    <input type="text" id="txtBad2" class="txtBad2 select-size50-height23 " value="0" />
+                                    <input type="text" id="txtBad2" class="txtBad2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn hidecolumn">
                                     @*Return Qty1*@
@@ -1353,23 +1353,23 @@
                                 </td>
                                 <td>
                                     @*Qty2*@
-                                    <input type="text" id="txtQty2" class="txtQty2 select-size50-height23 " value="0" onchange="CheckBorrow()" />
+                                    <input type="text" id="txtQty2" class="txtQty2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" onchange="CheckBorrow()" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Good2*@
-                                    <input type="text" id="txtGood2" class="txtGood2 select-size50-height23 " value="0" />
+                                    <input type="text" id="txtGood2" class="txtGood2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Lost2*@
-                                    <input type="text" id="txtLost2" class="txtLost2 select-size50-height23 " value="0" />
+                                    <input type="text" id="txtLost2" class="txtLost2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Repair2*@
-                                    <input type="text" id="txtRepair2" class="txtRepair2 select-size50-height23 " value="0" />
+                                    <input type="text" id="txtRepair2" class="txtRepair2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Bad2*@
-                                    <input type="text" id="txtBad2" class="txtBad2 select-size50-height23 " value="0" />
+                                    <input type="text" id="txtBad2" class="txtBad2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn hidecolumn">
                                     @*Return Qty1*@
@@ -1452,7 +1452,16 @@
         }
         else
         {
-            alert('จำนวนที่คืนจะต้องเท่ากับจำนวนที่เบิก กรุณาใส่ข้อมูลให้ถูกต้อง');
+            $('#ShowDialog').modal('show');
+            var html = '<div class="modal-dialog modal-dialog-danger">';
+            html += '<div class="modal-content">';
+            html += '<div class="modal-header modal-header-danger">';
+            html += '<button type="button" class="close" data-dismiss="modal">&times;</button>';
+            html += '<h4 class="modal-title">Requisition & Return</h4>';
+            html += '</div>';
+            html += '<div class="modal-body modal-body-danger">จำนวนที่คืนจะต้องเท่ากับจำนวนที่เบิก กรุณาใส่ข้อมูลให้ถูกต้อง</br></br></div>';
+            html += '</div></div>';
+            document.getElementById("ShowDialog").innerHTML = html;
         }
     }
 </script>
