--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -153,11 +153,14 @@
                                                 <div id="mnReport" class="menupink dropdown-toggle" data-toggle="dropdown">Report<span class="caret"></span></div>
                                                 <ul class="dropdown-menulightpink">
                                                     <li id="subRptJob">
-                                                        @Html.ActionLink("JobOrder", "IndexReportJobOrder", "ReportJobOrder")
+                                                        @Html.ActionLink("Job Order", "IndexReportJobOrder", "ReportJobOrder")
                                                     </li>
                                                     <li id="subRptRequisition">
                                                         @Html.ActionLink("Requisition", "IndexRptBorrow", "ReportBorrow")
                                                     </li>
+                                                    @*<li id="subRptJobPayment">
+                                                        @Html.ActionLink("Job Payment", "IndexRptJobPayment", "ReportJobPayment")
+                                                    </li>*@
                                                 </ul>
                                             </li>
                                         </ul>
