--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -20,6 +20,9 @@
  */
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
+.wd70{
+        width: 70px;
+}
 .mgr-top10
 {
     margin-top: 10px !important;
@@ -6510,10 +6513,11 @@ body.modal-open,
   min-height: 16.428571429px;
   padding: 10px;
   border-bottom: 1px solid #e5e5e5;
+  color:white;
   /*background-color: #76c0a4;*/
-  /*background-color: #e06144;*/
+  background-color: #f28369;
   /*background-color: #ec8f7a;*/
-  background-color: #ffd95c;
+  /*background-color: #ffd95c;*/
 }
 
 .modal-header .close {
