--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -111,7 +111,7 @@
                     <div class="col-xs-4 col-sm-3 col-lg-2">
                         <div class="form-group">
                             <label for="txtLifetime">อายุใช้งาน (ปี):</label>
-                            <input type="text" id="txtLifetime" class="form-control" placeholder="" />
+                            <input type="text" id="txtLifetime" class="form-control txtsize80" placeholder="" />
                         </div>
                     </div>
                     <div class="col-xs-4 col-sm-3 col-lg-2">
